# Reccordion

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.cmd  run.cmd  vcpkg.json
examples/c/: CMakeLists.txt
examples/c/include/: Reccordion.h
examples/c/scripts/: run.cmd
examples/c/src/: Reccordion.c
examples/java/Project/c/: CMakeLists.txt
examples/java/Project/c/include/: Reccordion.h
examples/java/Project/c/src/: Reccordion.cpp
examples/java/Project/scripts/: build.cmd  generate.cmd  run.cmd
examples/java/Project/src/: Main.java  Reccordion.java
examples/python/scripts/: run.cmd
examples/python/src/: main.py  reccordion.py
examples/rust/project/: Cargo.toml  build.rs
examples/rust/project/scripts/: build.cmd  run.cmd
examples/rust/project/src/: main.rs  reccordion.rs
include/Reccordion/: Reccordion.h  ReccordionDefinitions.h
src/: PrototypeRecorder.cpp
